--- a/main.html
+++ b/main.html
@@ -7,7 +7,61 @@
 </head>
 
 <body>
+
 	<!-- the entire body must be written by student -->
+	<header>
+    <h1>Inception</h1>
+  </header>
+
+  <!-- Navigation -->
+  <nav>
+    <a id="nav-actor" href="#actor">Actors</a>
+    <a id="nav-quote" href="#quote">Quotes</a>
+  </nav>
+
+  <!-- Summary -->
+  <main>
+    <section id="summary">
+      <h2>Summary</h2>
+      <p>
+        Inception is a sci-fi thriller directed by Christopher Nolan. 
+        It explores the concept of shared dreaming, where a skilled thief, 
+        Dom Cobb, is tasked with planting an idea in someone’s mind — 
+        a process known as "inception". 
+        The movie blends action, philosophy, and mind-bending visuals.
+      </p>
+    </section>
+
+    <!-- Actors Section -->
+    <section id="actor">
+      <h2>Actors</h2>
+      <ul>
+        <li><strong>Leonardo DiCaprio</strong> as Dom Cobb</li>
+        <li><strong>Joseph Gordon-Levitt</strong> as Arthur</li>
+        <li><strong>Ellen Page</strong> as Ariadne</li>
+        <li><strong>Tom Hardy</strong> as Eames</li>
+      </ul>
+    </section>
+
+    <!-- Quotes Section -->
+    <section id="quote">
+      <h2>Favorite Quote</h2>
+      <blockquote>
+        "You mustn’t be afraid to dream a little bigger, darling." — Eames
+      </blockquote>
+    </section>
+  </main>
+
+  <!-- Aside -->
+  <aside>
+    <p><strong>IMDb Rating:</strong> 8.8/10</p>
+    <p><strong>Release Date:</strong> July 16, 2010</p>
+  </aside>
+
+  <!-- Footer -->
+  <footer>
+    Produced by: <strong>Christopher Nolan</strong>
+  </footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
