--- a/main.html
+++ b/main.html
@@ -18,21 +18,17 @@
     <a id="nav-actor" href="#actor">Actors</a>
     <a id="nav-quote" href="#quote">Quotes</a>
   </nav>
-
-  <!-- Summary -->
   <main>
     <section id="summary">
-      <h2>Summary</h2>
-      <p>
-        Inception is a sci-fi thriller directed by Christopher Nolan. 
-        It explores the concept of shared dreaming, where a skilled thief, 
-        Dom Cobb, is tasked with planting an idea in someone’s mind — 
-        a process known as "inception". 
-        The movie blends action, philosophy, and mind-bending visuals.
-      </p>
+       <summary>
+    <p>
+      "Inception" is a mind-bending sci-fi thriller directed by Christopher Nolan. 
+      It follows Dom Cobb, a skilled thief who steals secrets by entering people’s dreams. 
+      Tasked with planting an idea instead of stealing one, he and his team navigate through 
+      complex dream worlds full of danger and deception.
+    </p>
+  </summary>
     </section>
-
-    <!-- Actors Section -->
     <section id="actor">
       <h2>Actors</h2>
       <ul>
@@ -42,8 +38,6 @@
         <li><strong>Tom Hardy</strong> as Eames</li>
       </ul>
     </section>
-
-    <!-- Quotes Section -->
     <section id="quote">
       <h2>Favorite Quote</h2>
       <blockquote>
