--- a/main.html
+++ b/main.html
@@ -19,8 +19,7 @@
     <a id="nav-quote" href="#quote">Quotes</a>
   </nav>
   <main>
-    <section id="summary">
-       <summary>
+       <summary id="summary">
     <p>
       "Inception" is a mind-bending sci-fi thriller directed by Christopher Nolan. 
       It follows Dom Cobb, a skilled thief who steals secrets by entering people’s dreams. 
@@ -28,7 +27,6 @@
       complex dream worlds full of danger and deception.
     </p>
   </summary>
-    </section>
     <section id="actor">
       <h2>Actors</h2>
       <ul>
