--- a/main.html
+++ b/main.html
@@ -8,51 +8,46 @@
 
 <body>
 
-	<!-- the entire body must be written by student -->
-	<header>
+<header>
     <h1>Inception</h1>
   </header>
 
-  <!-- Navigation -->
+  <!-- Navigation Section -->
   <nav>
-    <a id="nav-actor" href="#actor">Actors</a>
-    <a id="nav-quote" href="#quote">Quotes</a>
+    <a href="#actor" id="nav-actor">Actors</a>
+    <a href="#quote" id="nav-quote">Quotes</a>
   </nav>
-  <main>
-       <summary id="summary">
-    <p>
-      "Inception" is a mind-bending sci-fi thriller directed by Christopher Nolan. 
-      It follows Dom Cobb, a skilled thief who steals secrets by entering people’s dreams. 
-      Tasked with planting an idea instead of stealing one, he and his team navigate through 
-      complex dream worlds full of danger and deception.
-    </p>
-  </summary>
-    <section id="actor">
-      <h2>Actors</h2>
-      <ul>
-        <li><strong>Leonardo DiCaprio</strong> as Dom Cobb</li>
-        <li><strong>Joseph Gordon-Levitt</strong> as Arthur</li>
-        <li><strong>Ellen Page</strong> as Ariadne</li>
-        <li><strong>Tom Hardy</strong> as Eames</li>
-      </ul>
-    </section>
-    <section id="quote">
-      <h2>Favorite Quote</h2>
-      <blockquote>
-        "You mustn’t be afraid to dream a little bigger, darling." — Eames
-      </blockquote>
-    </section>
-  </main>
 
-  <!-- Aside -->
+  <!-- Summary Section -->
+  <section>
+    <h2>Summary</h2>
+    <p>Inception is a mind-bending thriller where a thief, Dom Cobb, who has the ability to enter people's dreams and steal secrets, is offered a chance to have his criminal record erased. To earn this opportunity, Cobb and his team must implant an idea into a target's subconscious, a process known as "inception." As they delve deeper into the layers of dreams, the line between reality and illusion begins to blur.</p>
+  </section>
+
+  <!-- Actor Section -->
+  <section id="actor">
+    <h2>Actors</h2>
+    <p><strong>Leonardo DiCaprio</strong> plays Dom Cobb, the main protagonist who is skilled in the art of extraction and inception. DiCaprio's performance is a standout, portraying Cobb's inner turmoil and desire for redemption.</p>
+    <p><strong>Joseph Gordon-Levitt</strong> plays Arthur, Cobb's right-hand man, who helps navigate the complexities of dreams.</p>
+    <p><strong>Ellen Page</strong> (now Elliot Page) portrays Ariadne, the architect of dreams, who designs the intricate dream worlds in which the heist takes place.</p>
+  </section>
+
+  <!-- Quote Section -->
+  <section id="quote">
+    <h2>Favorite Quote</h2>
+    <p>"You mustn't be afraid to dream a little bigger, darling." - Eames (played by Tom Hardy)</p>
+  </section>
+
+  <!-- Aside Section -->
   <aside>
+    <h2>Additional Information</h2>
     <p><strong>IMDb Rating:</strong> 8.8/10</p>
     <p><strong>Release Date:</strong> July 16, 2010</p>
   </aside>
 
-  <!-- Footer -->
+  <!-- Footer Section -->
   <footer>
-    Produced by: <strong>Christopher Nolan</strong>
+    <p>Produced by: Christopher Nolan</p>
   </footer>
     <script type="text/javascript" src="./script.js">
 </script>
